@@ -40,6 +40,11 @@ ORCJAVA-501
 
   - Support remote command to trigger online sync	
 
+ORCJAVA-503
+===========
+
+  - Never send md5 encoded password to backend
+
 Controller Pro 1.3.0
 ====================
 
